--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
         <div class="nav-search">
           <select name="" id="" class="serach-select">
             <option value="">All</option>
+            <option value="">Automotive</option>
+            <option value="">Computers</option>
+            <option value="">Books</option>
+            <option value="">baby</option>
+            <option value="">Beauty</option>
           </select>
           <input type="text" class="search-input" placeholder="Search Amazon" />
           <div class="search-icon">
