--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
         <div class="footer-row3">
         <div class="foot-row3-div">
           <div class="foot-logo">
-            <img src="img/amazon_logo.png" alt="amazon-logo" />
+            <a href="index.html"><img src="img/amazon_logo.png" alt="amazon-logo" /></a>
           </div>
           <div class="foot-btns">
             <button><i class="fa-solid fa-globe"></i>&nbsp; English</button><button><i class="fa-solid fa-dollar-sign"></i>&nbsp; USD - U.S. Dollar</button
